// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login/> renders <Login /> component 1`] = `
<Fragment>
  <h1>
    <FontAwesome
      name="user-circle-o"
    />
     Please, login
  </h1>
  <Form
    inline={false}
    noValidate={true}
    onSubmit={[MockFunction]}
  >
    <Field
      component={[Function]}
      htmlFor="identifier"
      label="Username / Email"
      name="identifier"
      placeholder="Type your Username or Email"
      required={true}
      type="text"
    />
    <Field
      component={[Function]}
      label="Password"
      name="password"
      placeholder="Come up with a password"
      required={true}
      type="password"
    />
    <FormGroup>
      <Link
        to="/login/forgot"
      >
        Forgot password?
      </Link>
    </FormGroup>
    <Button
      active={false}
      disabled={false}
      size="lg"
      type="submit"
      variant="primary"
    >
      Login 
      <FontAwesome
        name="sign-in"
      />
    </Button>
  </Form>
</Fragment>
`;

exports[`<Login/> renders <Login /> component with error state 1`] = `
<Fragment>
  <h1>
    <FontAwesome
      name="user-circle-o"
    />
     Please, login
  </h1>
  <Form
    inline={false}
    noValidate={true}
    onSubmit={[MockFunction]}
  >
    <Alert
      closeLabel="Close alert"
      show={true}
      transition={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": Object {
            "appear": false,
            "in": false,
            "mountOnEnter": false,
            "timeout": 300,
            "unmountOnExit": false,
          },
          "displayName": "Fade",
          "render": [Function],
        }
      }
      variant="danger"
    >
      Test Error
    </Alert>
    <Field
      component={[Function]}
      htmlFor="identifier"
      label="Username / Email"
      name="identifier"
      placeholder="Type your Username or Email"
      required={true}
      type="text"
    />
    <Field
      component={[Function]}
      label="Password"
      name="password"
      placeholder="Come up with a password"
      required={true}
      type="password"
    />
    <FormGroup>
      <Link
        to="/login/forgot"
      >
        Forgot password?
      </Link>
    </FormGroup>
    <Button
      active={false}
      disabled={false}
      size="lg"
      type="submit"
      variant="primary"
    >
      Login 
      <FontAwesome
        name="sign-in"
      />
    </Button>
  </Form>
</Fragment>
`;
